# MotorArmProject

./: .gitmodules  LICENSE  README.md  main_demo.py  run_hil.py  run_sil.py
.github/ISSUE_TEMPLATE/: development-issue.md
config/: arm_config.py
data/Cap_data/: SIM_cap_testing1.txt  SIM_cap_testing2.txt  SIM_cap_testing3.txt  SIM_cap_testing_still.txt
data/cadence_test_dat/: MT_012006A8-2022-07-12-16h38_000_52-000.txt  MT_012006A8-2022-07-12-16h40_000_36-000.txt
data/cadence_test_data/: .~lock.MT_012006A8-2022-07-12-16h38_000_52-000.txt#  (+7 more)
docs/: FirstDraftHIL.drawio
models/: RKS_FINAL_BIN.joblib  RKS_FINAL_BIN_K_3.joblib  RKS_FINAL_MULTI.joblib  Ryans_Knn.joblib  Simple_Knn.joblib
pico/pico-code/: CMakeLists.txt  i2c_m050_imu.c  main.c
pico/pico-code/include/: i2c_m050_imu.h
scripts/: analysis_step_count.py  analyze_filters.py  animation_simulation.py  compare_freq_domains.py  convert_nupoc_files.py  log_imu_data.py  mt_parser.py  pendulum_gui.py  pendulum_gui_demo.py  plot_data_profiles.py  plot_imu_samples.py  plots_step_counter.py  read_imu_samples.py  test_animation.py  test_feature_extraction.py  test_file.py  train_knn.py  train_models.py  train_svm.py
src/: __init__.py  cadence_tracker.py  classifier_sm.py  data_queue.py  gui_objects.py  i2c_interface.py  imu_interface.py  main_demo.py  mt_parser.py  odrive_control.py  pendulum_gui.py  pid.py  test_cadence_tracker.py  traj_look_up.py  traj_spline_gen.py
tests/: __init__.py
utils/: __init__.py  animation_fcns.py  data_helper_fcns.py  data_helpers.py  nupoc_convert_fcns.py  parser_fcns.py
(+25 files in other folders)
